Fix #1749 by using word-wrap instead of word-break

--- a/src/NuGetGallery/Content/Site.css
+++ b/src/NuGetGallery/Content/Site.css
@@ -508,6 +508,11 @@ section.package {
     padding-top: 10px;
 }
 
+    section.package div.main header.package-list-header {
+        width: 820px;
+        overflow: hidden;
+    }
+
     section.package div.minimum-client-version {
         float: right;
     }
@@ -537,12 +542,13 @@ section.package {
     section.package ul,
     section.package li { display: inline; }
 
-section.package h1 {
-    font-size: 1.75em;
-    display: inline-block;
-    word-break: break-all;
-    margin: 0;
-}
+    section.package h1 {
+        font-size: 1.75em;
+        display: inline-block;
+        -ms-word-wrap: break-word;
+        word-wrap: break-word;
+        margin: 0;
+    }
 
     section.package p {
         line-height: 1.25em;
